refactor: replace Collectors.toList() with Stream.toList() in InMemoryLoanRepository